<resources>
    <string name="app_name">Garrage  App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_programare">Programare</string>

    <string-array name="motorizare_list">
        <item>Benzina</item>
        <item>Diesel</item>
    </string-array>

    <string name="time_9">
        9<font size="9"><sup>00</sup></font>
    </string>

    <string name="time_10">
        10<font size="9"><sup>00</sup></font>
    </string>

    <string name="time_11">
        11<font size="9"><sup>00</sup></font>
    </string>

    <string name="time_12">
        12<font size="9"><sup>00</sup></font>
    </string>
    <string name="time_13">
        13<font size="9"><sup>00</sup></font>
    </string>

    <string name="time_14">
        14<font size="9"><sup>00</sup></font>
    </string>

    <string name="time_15">
        15<font size="9"><sup>00</sup></font>
    </string>

    <string name="time_16">
        16<font size="9"><sup>00</sup></font>
    </string>

    <string name="time_17">
        17<font size="9"><sup>00</sup></font>
    </string>

    <string name="current_day_date">8 October, 2016</string>
</resources>
